# microapple-sheet

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  _Backlog.md  ci.yml.example  config.toml  pyproject.toml
libreoffice/: Module1.xba
src/microapple_sheet/: __init__.py  __main__.py  backups.py  bridge.py  config.py  engine.py  libreoffice.py  liveformula.py  ops_openpyxl.py  server.py
tests/: __init__.py  test_bridge.py  test_phase1b.py  test_phase3.py  test_rule0_regression.py  test_sheet_ops.py  test_smoke.py
